# NLP_

./: 4_0_TFIDF_ML.md  4_1_RNN_Embedding.md  nlp_base (2).ipynb  nlp_base.ipynb  nlp_detacteur d'emotion copy.ipynb  nlp_detecteur d'emotion.ipynb  nlp_embedding.ipynb  pyproject.toml
